# BD_YATP

./: .gitattributes  .gitignore  .txt  BD.h  BD_Test.txt  BD_YATP.cpp  BD_YATP.sln  BD_YATP.vcxproj  BD_YATP.vcxproj.filters  CMakeLists.txt  Checksum.h  DynamicArray.h  Globals.h  HashMap.h  Info.cpp  Info.h  RCa65672  TABLE_Tablichka.txt  Table.cpp  Table.h  Tablichka.txt  Validators.h
include/BD_YATP/: BD.h  ConsoleApp.h  Globals.h  Info.h  QueryTable.h  Table.h
include/utils/: Checksum.h  DynamicArray.h  HashMap.h  Parsers.h  PrintUtils.h  Table.h
main/: BD_YATP.cpp
src/: BD.cpp  Info.cpp  QueryTable.cpp  Table.cpp
src/utils/: Checksum.cpp  ConsoleApp.cpp  Parsers.cpp  PrintUtils.cpp  Validators.cpp
